--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -21,6 +21,7 @@ varnish::environment_ip_prefix: "%{hiera('environment_ip_prefix')}"
 govuk::deploy::config::nofile_limit: 65536
 
 router::nginx::app_specific_static_asset_routes:
+  '/assets/calculators/': 'calculators'
   '/assets/collections/': 'collections'
   '/assets/frontend/': 'frontend'
   '/assets/government-frontend/': 'government-frontend'
