Configure email-alert-frontend to allow assets from www hostname
This sets up assets/email-alert-frontend as a path assets can be wrote to
for email-alert-frontend. This then sets up that path in router and draft
router to proxy to the email-alert-frontend app.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -23,6 +23,7 @@ govuk::deploy::config::nofile_limit: 65536
 router::nginx::app_specific_static_asset_routes:
   '/assets/calculators/': 'calculators'
   '/assets/collections/': 'collections'
+  '/assets/email-alert-frontend/': 'email-alert-frontend'
   '/assets/frontend/': 'frontend'
   '/assets/government-frontend/': 'government-frontend'
   '/assets/static/': 'static'
