--- a/hieradata_aws/class/draft_cache.yaml
+++ b/hieradata_aws/class/draft_cache.yaml
@@ -26,6 +26,7 @@ govuk::apps::router_api::vhost: 'draft-router-api'
 
 router::nginx::app_specific_static_asset_routes:
   '/assets/collections/': 'draft-collections'
+  '/assets/email-alert-frontend/': 'draft-email-alert-frontend'
   '/assets/frontend/': 'draft-frontend'
   '/assets/government-frontend/': 'draft-government-frontend'
   '/assets/static/': 'draft-static'
