Configure finder-frontend to allow assets from www hostname
This sets up assets/finder-frontend as a path assets can be wrote to
for the finder-frontend app. This then sets up that path in router to proxy
requests for that app. It doesn't set up a proxy in draft-router as
finder-frontend only runs in the live stack.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -24,6 +24,7 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/calculators/': 'calculators'
   '/assets/collections/': 'collections'
   '/assets/email-alert-frontend/': 'email-alert-frontend'
+  '/assets/finder-frontend/': 'finder-frontend'
   '/assets/frontend/': 'frontend'
   '/assets/government-frontend/': 'government-frontend'
   '/assets/static/': 'static'
