Configure info-frontend to allow assets from www hostname
This sets up assets/info-frontend as a path assets can be wrote to
for the info-frontend app. This then sets up that path in router to proxy
requests for that app. It doesn't set up a proxy in draft-router as
info-frontend only runs in the live stack.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -25,6 +25,7 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/collections/': 'collections'
   '/assets/email-alert-frontend/': 'email-alert-frontend'
   '/assets/finder-frontend/': 'finder-frontend'
+  '/assets/info-frontend/': 'info-frontend'
   '/assets/frontend/': 'frontend'
   '/assets/government-frontend/': 'government-frontend'
   '/assets/static/': 'static'
