Configure licencefinder to allow assets from www hostname
This sets up assets/licencefinder as a path assets can be wrote to
for the licence finder app. This then sets up that path in router to proxy
requests for that app. It doesn't set up a proxy in draft-router as
licence finder only runs in the live stack.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -28,4 +28,5 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/info-frontend/': 'info-frontend'
   '/assets/frontend/': 'frontend'
   '/assets/government-frontend/': 'government-frontend'
+  '/assets/licencefinder/': 'licencefinder'
   '/assets/static/': 'static'
