Configure manuals-frontend to allow assets from www hostname
This sets up assets/manuals-frontend as a path assets can be wrote to
for manuals-frontend. This then sets up that path in router and draft
router to proxy to the manuals-frontend app.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -29,4 +29,5 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/frontend/': 'frontend'
   '/assets/government-frontend/': 'government-frontend'
   '/assets/licencefinder/': 'licencefinder'
+  '/assets/manuals-frontend/': 'manuals-frontend'
   '/assets/static/': 'static'
