Configure service-manual-frontend to allow assets from www hostname
This sets up assets/service-manual-frontend as a path assets can be wrote to
for service-manual-frontend. This then sets up that path in router and draft
router to proxy to the service-manual-frontend app.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -30,4 +30,5 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/government-frontend/': 'government-frontend'
   '/assets/licencefinder/': 'licencefinder'
   '/assets/manuals-frontend/': 'manuals-frontend'
+  '/assets/service-manual-frontend/': 'service-manual-frontend'
   '/assets/static/': 'static'
