--- a/hieradata_aws/class/draft_cache.yaml
+++ b/hieradata_aws/class/draft_cache.yaml
@@ -30,6 +30,7 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/frontend/': 'draft-frontend'
   '/assets/government-frontend/': 'draft-government-frontend'
   '/assets/manuals-frontend/': 'draft-manuals-frontend'
+  '/assets/service-manual-frontend/': 'draft-service-manual-frontend'
   '/assets/static/': 'draft-static'
 
 router::nginx::check_requests_warning: '@0'
