Configure smartanswers to allow assets from www hostname
This sets up assets/smartanswers as a path assets can be wrote to
for smartanswers. This then sets up that path in router and draft
router to proxy to the smartanswers app.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -31,4 +31,5 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/licencefinder/': 'licencefinder'
   '/assets/manuals-frontend/': 'manuals-frontend'
   '/assets/service-manual-frontend/': 'service-manual-frontend'
+  '/assets/smartanswers/': 'smartanswers'
   '/assets/static/': 'static'
