--- a/hieradata_aws/class/draft_cache.yaml
+++ b/hieradata_aws/class/draft_cache.yaml
@@ -31,6 +31,7 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/government-frontend/': 'draft-government-frontend'
   '/assets/manuals-frontend/': 'draft-manuals-frontend'
   '/assets/service-manual-frontend/': 'draft-service-manual-frontend'
+  '/assets/smartanswers/': 'draft-smartanswers'
   '/assets/static/': 'draft-static'
 
 router::nginx::check_requests_warning: '@0'
