Configure whitehall to allow assets from www hostname
This sets up assets/whitehall as a path where Whitehall can write it's
assets. This marks a bold new world outside of the confines of the
/government prefix (Whitehall assets are currently served from
/government/assets). This path is then set-up to proxy in live and draft
router. The draft proxy is to draft-whitehall-frontend which is just an
alias to whitehall-frontend, however this seems to be the more
conventional hostname used on the draft stack.

--- a/hieradata_aws/class/cache.yaml
+++ b/hieradata_aws/class/cache.yaml
@@ -33,3 +33,4 @@ router::nginx::app_specific_static_asset_routes:
   '/assets/service-manual-frontend/': 'service-manual-frontend'
   '/assets/smartanswers/': 'smartanswers'
   '/assets/static/': 'static'
+  '/assets/whitehall/': 'whitehall-frontend'
