--- a/hieradata/integration.yaml
+++ b/hieradata/integration.yaml
@@ -105,6 +105,7 @@ govuk::node::s_mysql_master::s3_bucket_name: "%{hiera('govuk::node::s_mysql_back
 govuk::node::s_whitehall_backend::sync_mirror: true
 
 govuk_jenkins::jobs::deploy_app_downstream::deploy_url: 'deploy.integration.publishing.service.gov.uk'
+govuk_jenkins::jobs::deploy_app_downstream::smokey_pre_check: false
 
 govuk_postgresql::server::standby::pgpassfile_enabled: true
 
