Copy this to aws hierdata too
This was missed from
https://github.com/alphagov/govuk-puppet/pull/10410.

--- a/hieradata_aws/common.yaml
+++ b/hieradata_aws/common.yaml
@@ -1437,6 +1437,11 @@ router::nginx::robotstxt: |
   User-agent: MS Search 6.0 Robot
   Disallow: /
 
+  # Google's crawler was sending requests for each variation of query param for the sectors page of licence-finder
+  # resulting in millions of requests a day.
+  User-agent: Googlebot
+  Disallow: /licence-finder/*
+
 sidekiq_host: 'backend-redis'
 sidekiq_port: '6379'
 
